--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body> <!-- Основная часть документа -->
-    <h1 class="blue-centered">ИТ ТЕХНОЛОГИИ ОЧЕНЬ БЫСТРО ПОЕДАЮТ МИР!</h1> <!--  Header 1 -->
+    <h1 class="blue-centered">ТЕХНОЛОГИИ ПОЕДАЮТ МИР!</h1> <!--  Header 1 -->
     <h2 class="blue-centered">Поторопись изучить технологии!  Не дай себя съесть !</h2>    
     <p class="blue-centered" id="message"></p>
     <hr>
